@@ -165,11 +165,3 @@ svg.icon-spinner {
   height: 1.5em;
   color: $color-red;
 }
-
-// Media for Windows High Contrast mode
-
-@media (forced-colors: $media-forced-colours) {
-  .icon {
-    fill: $system-color-link-text;
-  }
-}
