@@ -113,6 +113,7 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Fix display of dates in exported xlsx files on macOS Preview and Numbers (Jaap Roes)
  * Make progress bars’ progress visible in forced colors mode (Anuja Verma)
  * Make checkboxes visible in forced colors mode (Anuja Verma)
+ * Display the correct color for icons in forced colors mode (Anuja Verma)
 
 
 ## Upgrade considerations
