@@ -93,6 +93,7 @@ Changelog
  * Fix: Fix display of dates in exported xlsx files on macOS Preview and Numbers (Jaap Roes)
  * Fix: Make progress bars’ progress visible in forced colors mode (Anuja Verma)
  * Fix: Make checkboxes visible in forced colors mode (Anuja Verma)
+ * Fix: Display the correct color for icons in forced colors mode (Anuja Verma)
 
 
 3.0.1 (16.06.2022)
